# ci-with-python

./: .gitignore  README.md  pyproject.toml  requirements.txt  setup.cfg  tox.ini
.github/workflows/: python-app.yml
src/ci_with_python/: __init__.py  models.py
src/ci_with_python.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
tests/: test_course_class.py  test_user.py
