[metadata]
name = ci-with-python
description = Learning how to make CI with Pytest
author = Matheus Alves
keywords = CI, GitHub

[options]
include_package_data = True
python_requires = >=3.8
package_dir=
  =src
packages=
  ci_with_python
zip_safe = no

[options.extras_require]
testing = 
  pytest>=6.0
  pytest-cov>=2.0
  mypy>=0.910
  flake8>=3.9
  tox>=3.24

[options.package_data]
ci_with_python = py.typed

[flake8]
max-line-length = 160
